<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:background="@color/tan_background"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="@dimen/list_item_height"
                android:layout_height="@dimen/list_item_height"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp" />
        </LinearLayout>
        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_item_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_name"
                android:inputType="textCapWords" />
            <!-- Supplier field -->
            <EditText
                android:id="@+id/edit_item_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_supplier"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_item_qty"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_inventory_qty"
                android:inputType="number" />

            <!-- Input fields -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="4dp">

                <!-- Units for currency ($) -->
                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/EditorUnitsStyle"
                    android:text="@string/unit_inventory_price" />

                <EditText
                    android:id="@+id/edit_item_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_inventory_price"
                    android:inputType="numberDecimal"
                    android:paddingStart="16dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/EditorButtonStyle"
        android:text="@string/image_chooser_text" />

    <Button
        android:id="@+id/button2"
        style="@style/EditorButtonStyle"
        android:text="@string/action_order" />

    <Button
        android:id="@+id/button3"
        style="@style/EditorButtonStyle"
        android:text="@string/action_receive" />

    <Button
        android:id="@+id/button4"
        style="@style/EditorButtonStyle"
        android:text="@string/action_sale" />
</LinearLayout>
